src/objects/AllNotes__c.object
<CustomObject>
    <description>Legacy notes from Episys</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Number</label>
        <referenceTo>Account_Details__c</referenceTo>
        <relationshipLabel>Episys Notes</relationshipLabel>
        <relationshipName>All_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Text__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <label>Created By User</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnterDate__c</fullName>
        <label>Enter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoteID__c</fullName>
        <externalId>true</externalId>
        <label>Note ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoteText__c</fullName>
        <label>Note Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecTypeID__c</fullName>
        <label>RecTypeID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecType__c</fullName>
        <label>RecType</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordChangedDate__c</fullName>
        <label>Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>temp__c</fullName>
        <label>temp</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>All Notes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RecordChangedDate__c</columns>
        <columns>EnterDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>NoteText__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>RecType__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Created_By_User_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Jeff_s_Notes</fullName>
        <columns>RecordChangedDate__c</columns>
        <columns>EnterDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>NoteText__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>RecType__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NoteID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountNumber__c</field>
            <operation>contains</operation>
            <value>214414</value>
        </filters>
        <label>Jeff&apos;s Notes</label>
    </listViews>
    <listViews>
        <fullName>Updated_Today</fullName>
        <columns>NAME</columns>
        <columns>RecordChangedDate__c</columns>
        <columns>EnterDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>NoteText__c</columns>
        <columns>Account_Number__c</columns>
        <columns>RecType__c</columns>
        <columns>Created_By_User__c</columns>
        <columns>Created_By_User_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Updated Today</label>
    </listViews>
    <nameField>
        <displayFormat>AllNote-{000000000}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>